public/analytics-pro/v0.9.0rc2/_sources/reference/tmlt/analytics/tuner/_tuner/index.rst.txt
:orphan:

..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024


*************
_tuner
*************

.. py:module:: tmlt.analytics.tuner._tuner

.. autoapi-nested-parse::

   Interface for tuning :class:`~.SessionProgram`\ s.











Classes
=======

.. list-table::

   * - :class:`.Tunable`
     - Named placeholder for a single input to a :class:`~.SessionProgramTunerBuilder`.
   * - :class:`.TunablePrivateDataFrame`
     - A private dataframe and its protected change.
   * - :class:`.TunableDataFrameMixin`
     - Add tunable private and public dataframe support to a builder.
   * - :class:`.TunablePrivacyBudgetMixin`
     - Add support for tunable privacy budgets to a builder.
   * - :class:`.SessionProgramTunerBuilder`
     - Abstract builder for a SessionProgramTuner.
   * - :class:`.SessionProgramTuner`
     - Base class for defining a object to tune inputs to a :class:`~.SessionProgram`.

   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: Tunable

   Named placeholder for a single input to a :class:`~.SessionProgramTunerBuilder`.

   When a :class:`~.Tunable` is passed to a :class:`~.SessionProgramTunerBuilder`, it
   is replaced with the concrete values for the tunable parameter when building
   :class:`~.SessionProgram` s inside of methods like
   :meth:`~.tuner.SessionProgramTuner.error_report` and
   :meth:`~.tuner.SessionProgramTuner.multi_error_report`.





   .. py:attribute:: name
      :annotation: :str

      Name of the tunable parameter.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: TunablePrivateDataFrame

   Bases: :class:`NamedTuple`

   A private dataframe and its protected change.

   One or both of the dataframe and protected_change can be a Tunable.







   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: TunableDataFrameMixin

   Bases: :class:`tmlt.analytics._base_builder.DataFrameMixin`

   Add tunable private and public dataframe support to a builder.






   .. automethod:: __init__
   .. py:method:: with_private_dataframe(source_id, dataframe, protected_change)

      Add a tunable private dataframe to the builder.


   .. py:method:: with_public_dataframe(source_id, dataframe)

      Add a tunable public dataframe to the builder.


   .. py:method:: with_id_space(id_space)

      Add an identifier space.

      This defines a space of identifiers that map 1-to-1 to the identifiers
      being protected by a table with the :class`~AddRowsWithID` protected
      change. Any table with such a protected change must be a member of some
      identifier space.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: TunablePrivacyBudgetMixin

   Bases: :class:`tmlt.analytics._base_builder.PrivacyBudgetMixin`

   Add support for tunable privacy budgets to a builder.






   .. automethod:: __init__
   .. py:method:: with_privacy_budget(privacy_budget)

      Set the privacy budget for the object being built.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: SessionProgramTunerBuilder

   Bases: :class:`tmlt.analytics._base_builder.BaseBuilder`, :class:`TunableDataFrameMixin`, :class:`tmlt.analytics._base_builder.ParameterMixin`, :class:`TunablePrivacyBudgetMixin`, :class:`abc.ABC`

   Abstract builder for a SessionProgramTuner.






   .. automethod:: __init__
   .. py:method:: build()
      :abstractmethod:

      Construct the type that this builder builds.


   .. py:method:: with_private_dataframe(source_id, dataframe, protected_change)

      Add a tunable private dataframe to the builder.


   .. py:method:: with_public_dataframe(source_id, dataframe)

      Add a tunable public dataframe to the builder.


   .. py:method:: with_id_space(id_space)

      Add an identifier space.

      This defines a space of identifiers that map 1-to-1 to the identifiers
      being protected by a table with the :class`~AddRowsWithID` protected
      change. Any table with such a protected change must be a member of some
      identifier space.


   .. py:method:: with_parameter(name, value)

      Set the value of a parameter.


   .. py:method:: with_privacy_budget(privacy_budget)

      Set the privacy budget for the object being built.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: SessionProgramTuner(builder)

   Base class for defining a object to tune inputs to a :class:`~.SessionProgram`.

   .. note::

       This class is only available on a paid version of Tumult Analytics. If you
       would like to hear more, please contact us at info@tmlt.io.

   SessionProgramTuners should not be directly constructed. Instead, they should be
   created using the :class:`~.SessionProgramTunerBuilder` that is automatically
   generated for each subclass of :class:`~.SessionProgramTuner` which can be accessed
   using the `Builder` attribute of the subclass.





   .. py:attribute:: baseline_options
      :annotation: :Optional[Union[Dict[str, tmlt.analytics.non_private_session.NonPrivateSession.Options], tmlt.analytics.non_private_session.NonPrivateSession.Options]]

      Configuration for how baseline outputs are computed.

      By default, a SessionProgramTuner computes both the DP outputs and the baseline
      outputs for a SessionProgram to compute metrics. The baseline outputs are computed
      by calling the :meth:`~.session_interaction` method with a
      :class:`~.NonPrivateSession`. The `baseline_options` attribute allows you to
      specify different configurations for the :class:`~.NonPrivateSession` used to
      compute the baseline. You can also specify multiple configurations for computing
      the baselines with different options. When multiple baseline configurations are
      specified, the metrics are computed with respect to each of the baseline
      configuration (unless specified otherwise in the metric definitions).

      To override the default baseline options
      (see :class:`~.NonPrivateSession.Options`), you can set this to
      :class:`~.NonPrivateSession.Options`.

      If you want to specify multiple baseline configurations, you can set this to a
      dictionary mapping baseline names to :class:`~.NonPrivateSession.Options`.

   .. py:attribute:: metrics
      :annotation: :Optional[List[tmlt.analytics.metrics.Metric]]

      A list of metrics to compute with the `error_report` method.

   .. py:attribute:: Builder
      :annotation: :Type[SessionProgramTunerBuilder]

      The builder for a specific subclass of SessionProgramTuner.

   .. py:attribute:: program
      :annotation: :Type[tmlt.analytics.program.SessionProgram]

      SessionProgram to be tuned.


   .. automethod:: __init__
   .. py:method:: tunables()
      :property:

      Return a list of tunable inputs associated with this tuner.


   .. py:method:: error_report(tunable_values = None)

      Computes DP outputs, baseline outputs, and metrics for a single run.

      :param tunable_values: A dictionary mapping names of Tunables to concrete values
                             to use for this error report. Every Tunable used in building this tuner
                             must have a value in this dictionary. This accepts None iff no
                             Tunables were used.


   .. py:method:: multi_error_report(tunable_values_list)

      Runs the `error_report` for each set of values for the Tunables.







